--- a/index.html
+++ b/index.html
@@ -9,16 +9,95 @@
     <!-- bootstrap cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- local css -->
-    <link rel="stylesheet" href="styles/style.css">
+    <script defer src="js/script.js"></script>
     <title>Buy Your iMac</title>
 </head>
 
-<body>
+<body class="container bg-light">
+    <!-- header section starts here  -->
     <header></header>
-    <main></main>
-    <footer></footer>
+    <!-- header section ends here  -->
 
+    <!-- main section starts here  -->
+    <main>
+        <!-- product section  -->
+        <section class="d-flex border-bottom border-2">
+
+            <!-- product image start  -->
+            <div class="w-50 mt-4">
+                <img src="images/iMac.png" alt="">
+            </div>
+            <!-- product image start  -->
+
+            <!-- product info start  -->
+            <div class="w-50 px-5 mt-4 ">
+                <h2 class="mb-3 mt-4">Customize your Blue 24‑inch iMac with Apple M1 chip.</h2>
+                <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and
+                    16-core Neural Engine.8GB unified memory. 256GB SSD storage. Two Thunderbolt / USB 4 ports. Magic
+                    Mouse. Magic Keyboard - US English</p>
+                <p class="fw-bold mt-4">Memory</p>
+                <button type="button" class="btn btn-outline-dark ">8GB unified memory</button>
+                <button type="button" class="btn btn-outline-dark ">16GB unified memory</button>
+                <p class="fw-bold mt-4">Storage</p>
+                <button type="button" class="btn btn-outline-dark ">256GB SSD storage</button>
+                <button type="button" class="btn btn-outline-dark ">512GB SSD storage</button>
+                <button type="button" class="btn btn-outline-dark mt-1">1TB SSD storage</button>
+                <p class="fw-bold mt-4">Choose Your Delivery Option</p>
+                <button type="button" class="btn btn-outline-dark ">FRIDAY, August 27 FREE Prime Delivery</button>
+                <button type="button" class="btn btn-outline-dark mt-1">SATURDAY, August 21 Delivery Charge $20</button>
+
+                <!-- product configuration start  -->
+                <article class="w-50 fw-bold mt-5">
+                    <div class="row border-bottom py-2">
+                        <div class="col-sm-9">Best Price</div>
+                        <div class="col-sm-3">$1299</div>
+                    </div>
+                    <div class="row border-bottom py-2">
+                        <div class="col-sm-9">Extra Memory Cost</div>
+                        <div class="col-sm-3">$0</div>
+                    </div>
+                    <div class="row border-bottom py-2">
+                        <div class="col-sm-9">Extra Storage Cost</div>
+                        <div class="col-sm-3">$0</div>
+                    </div>
+                    <div class="row border-bottom border-dark py-2">
+                        <div class="col-sm-9">Delivery Charge</div>
+                        <div class="col-sm-3">$0</div>
+                    </div>
+                    <div class="row border-bottom py-2">
+                        <div class="col-sm-9">Total Price</div>
+                        <div class="col-sm-3">$1299</div>
+                    </div>
+                </article>
+                <!-- product configuration end  -->
+
+                <!-- promo code section start -->
+                <p class="text-secondary fw-bold mt-3">Add Promo Code</p>
+                <div class="row g-3">
+                    <div class="col-auto">
+                        <input type="text" class="form-control" placeholder="Type Promo Code">
+                    </div>
+                    <div class="col-auto">
+                        <button class="btn btn-danger mb-3">Apply</button>
+                    </div>
+                </div>
+                <!-- promo code section start -->
+
+            </div>
+        </section>
+        <!-- product info end  -->
+
+        <!-- total price  -->
+        <section class="text-center p-4">
+            <h3>Total: $<span>1299</span></h3>
+        </section>
+
+    </main>
+    <!-- main section ends here  -->
+
+    <!-- footer section starts here  -->
+    <footer></footer>
+    <!-- footer section ends here  -->
 </body>
 
 </html>
