--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script defer src="js/script.js"></script>
+    <!-- <script defer src="js/script-DRY.js"></script> -->
     <title>Buy Your iMac</title>
 </head>
 
@@ -36,37 +37,39 @@
                     16-core Neural Engine.8GB unified memory. 256GB SSD storage. Two Thunderbolt / USB 4 ports. Magic
                     Mouse. Magic Keyboard - US English</p>
                 <p class="fw-bold mt-4">Memory</p>
-                <button type="button" class="btn btn-outline-dark ">8GB unified memory</button>
-                <button type="button" class="btn btn-outline-dark ">16GB unified memory</button>
+                <button id="8gb-memory" type="button" class="btn btn-outline-dark mt-1 ">8GB unified memory</button>
+                <button id="16gb-memory" type="button" class="btn btn-outline-dark mt-1 ">16GB unified memory</button>
                 <p class="fw-bold mt-4">Storage</p>
-                <button type="button" class="btn btn-outline-dark ">256GB SSD storage</button>
-                <button type="button" class="btn btn-outline-dark ">512GB SSD storage</button>
-                <button type="button" class="btn btn-outline-dark mt-1">1TB SSD storage</button>
+                <button id="256gb-storage" type="button" class="btn btn-outline-dark mt-1 ">256GB SSD storage</button>
+                <button id="512gb-storage" type="button" class="btn btn-outline-dark mt-1 ">512GB SSD storage</button>
+                <button id="1tb-storage" type="button" class="btn btn-outline-dark mt-1">1TB SSD storage</button>
                 <p class="fw-bold mt-4">Choose Your Delivery Option</p>
-                <button type="button" class="btn btn-outline-dark ">FRIDAY, August 27 FREE Prime Delivery</button>
-                <button type="button" class="btn btn-outline-dark mt-1">SATURDAY, August 21 Delivery Charge $20</button>
+                <button id="free-delivery" type="button" class="btn btn-outline-dark mt-1 ">FRIDAY, August 27 FREE Prime
+                    Delivery</button>
+                <button id="charged-delivery" type="button" class="btn btn-outline-dark mt-1">SATURDAY, August 21
+                    Delivery Charge $20</button>
 
                 <!-- product configuration start  -->
                 <article class="w-50 fw-bold mt-5">
                     <div class="row border-bottom py-2">
                         <div class="col-sm-9">Best Price</div>
-                        <div class="col-sm-3">$1299</div>
+                        <div class="col-sm-3">$<span id="base-price">1299</span></div>
                     </div>
                     <div class="row border-bottom py-2">
                         <div class="col-sm-9">Extra Memory Cost</div>
-                        <div class="col-sm-3">$0</div>
+                        <div class="col-sm-3">$<span id="extra-memory">0</span></div>
                     </div>
                     <div class="row border-bottom py-2">
                         <div class="col-sm-9">Extra Storage Cost</div>
-                        <div class="col-sm-3">$0</div>
+                        <div class="col-sm-3">$<span id="extra-storage">0</span></div>
                     </div>
                     <div class="row border-bottom border-dark py-2">
                         <div class="col-sm-9">Delivery Charge</div>
-                        <div class="col-sm-3">$0</div>
+                        <div class="col-sm-3">$<span id="extra-charge">0</span></div>
                     </div>
                     <div class="row border-bottom py-2">
                         <div class="col-sm-9">Total Price</div>
-                        <div class="col-sm-3">$1299</div>
+                        <div class="col-sm-3">$<span id="total-price">1299</span></div>
                     </div>
                 </article>
                 <!-- product configuration end  -->
@@ -75,10 +78,10 @@
                 <p class="text-secondary fw-bold mt-3">Add Promo Code</p>
                 <div class="row g-3">
                     <div class="col-auto">
-                        <input type="text" class="form-control" placeholder="Type Promo Code">
+                        <input id="promo-input" type="text" class="form-control" placeholder="Type Promo Code">
                     </div>
                     <div class="col-auto">
-                        <button class="btn btn-danger mb-3">Apply</button>
+                        <button id="promo-btn" class="btn btn-danger mb-3">Apply</button>
                     </div>
                 </div>
                 <!-- promo code section start -->
@@ -89,7 +92,7 @@
 
         <!-- total price  -->
         <section class="text-center p-4">
-            <h3>Total: $<span>1299</span></h3>
+            <h3>Total: $<span id="final-price">1299</span></h3>
         </section>
 
     </main>
