--- a/index.html
+++ b/index.html
@@ -5,33 +5,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <!-- bootstrap cdn  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- script link  -->
     <script defer src="js/script.js"></script>
-    <title>Buy Your iMac</title>
+    <title>iMac - Apple</title>
 </head>
 
-<body class="container bg-light">
+<body class="bg-white">
     <!-- header section starts here  -->
-    <header></header>
+    <header class="">
+        <section class="bg-dark">
+
+            <!-- nav bar start -->
+            <nav class="container text-white py-2">
+                <div class="row align-items-center">
+                    <div class="col-10 col-md-1">
+                        <a href="#"><i class="fab fa-apple text-decoration-none text-white fs-3"></i></a>
+                    </div>
+                    <div class="d-md-flex d-none col-11 justify-content-between">
+                        <a href="#" class="text-decoration-none text-white">Store</a>
+                        <a href="#" class="text-decoration-none text-white">Mac</a>
+                        <a href="#" class="text-decoration-none text-white">iPad</a>
+                        <a href="#" class="text-decoration-none text-white">iPhone</a>
+                        <a href="#" class="text-decoration-none text-white">Watch</a>
+                        <a href="#" class="text-decoration-none text-white">TV</a>
+                        <a href="#" class="text-decoration-none text-white">Music</a>
+                        <a href="#" class="text-decoration-none text-white">Support</a>
+                        <a href="#" class="text-decoration-none text-white"><i class="fas fa-search"></i></a>
+                        <a href="#" class="text-decoration-none text-white"><i class="fas fa-shopping-bag"></i></a>
+                    </div>
+
+                    <div class="d-block d-md-none col-2">
+                        <i class="fas fa-bars fs-3"></i>
+                    </div>
+                </div>
+            </nav>
+            <!-- nav bar end -->
+
+        </section>
+
+        <!-- page title bar start  -->
+        <section class="bg-white border-bottom">
+            <div class="container py-2 d-flex align-items-center justify-content-between">
+                <div>
+                    <a href="#" class="text-decoration-none text-dark fs-4">iMac</a>
+                </div>
+                <div class="">
+                    <a href="#" class="text-decoration-none text-secondary px-2">Overview</a>
+                    <a href="#" class="text-decoration-none text-secondary px-2">macOS</a>
+                    <a href="#" class="text-decoration-none text-secondary px-2">Tech Specs</a>
+                </div>
+            </div>
+        </section>
+        <!-- page title bar end  -->
+
+    </header>
     <!-- header section ends here  -->
 
     <!-- main section starts here  -->
-    <main>
+    <main class="container">
         <!-- product section  -->
-        <section class="d-lg-flex border-bottom border-2">
+        <section class="row border-bottom border-2">
 
             <!-- product image start  -->
-            <div class="w-lg-50 mt-4 d-flex d-lg-block justify-content-center">
-                <img src="images/iMac.png" alt="">
+            <div class="col-lg-6 mt-4 d-lg-block justify-content-center">
+                <div class="d-flex justify-content-center">
+                    <img src="images/iMac.png" alt="" class=" img-fluid">
+                </div>
+                <div class="d-flex align-items-center justify-content-center">
+                    <a href="" class="text-info text-decoration-none pe-auto">View gallery</a>
+                </div>
+                <div class="d-flex text-center mt-5 border-bottom">
+                    <div class="w-50">
+                        <i class="fas fa-box fs-3 text-secondary"></i>
+                        <p>Free delivery or pick up available items at an Apple Store.</p>
+                    </div>
+
+                    <div class="w-50">
+                        <i class="fas fa-people-carry fs-3 text-secondary"></i>
+                        <p>Free and easy returns</p>
+                    </div>
+                </div>
+                <div class="d-flex align-items-center justify-content-center mt-4">
+                    <h1> <i class="far fa-comments me-3"></i></h1>
+                    <div class="">
+                        <p class="mb-0">Have questions about buying a Mac?</p>
+                        <a href="" class="text-info text-decoration-underline pe-auto">Chat with a Mac Specialist</a>
+                    </div>
+                </div>
             </div>
             <!-- product image start  -->
 
             <!-- product info start  -->
-            <div class="w-lg-50 px-5 mt-4 ">
+            <div class="col-lg-6 px-5 mt-4 ">
                 <h2 class="mb-3 mt-4">Customize your Blue 24‑inch iMac with Apple M1 chip.</h2>
                 <p>Apple M1 chip with 8-core CPU with 4 performance cores and 4 efficiency cores, 7-core GPU, and
                     16-core Neural Engine.8GB unified memory. 256GB SSD storage. Two Thunderbolt / USB 4 ports. Magic
@@ -51,32 +123,34 @@
                 <button id="free-delivery" type="button" class="btn btn-outline-dark btn-sm mt-1 ">FRIDAY, August 27
                     FREE Prime
                     Delivery</button>
-                <button id="charged-delivery" type="button" class="btn btn-outline-dark btn-sm mt-1">SATURDAY, August 21
+                <button id="charged-delivery" type="button" class="btn btn-outline-dark btn-sm mt-1">SUNDAY, August 22
                     Delivery Charge $20</button>
 
                 <!-- product configuration start  -->
-                <article class="w-50 fw-bold mt-4">
-                    <div class="row border-bottom py-2">
-                        <div class="col-sm-9">Best Price</div>
-                        <div class="col-sm-3">$<span id="base-price">1299</span></div>
-                    </div>
-                    <div class="row border-bottom py-2">
-                        <div class="col-sm-9">Extra Memory Cost</div>
-                        <div class="col-sm-3">$<span id="extra-memory">0</span></div>
-                    </div>
-                    <div class="row border-bottom py-2">
-                        <div class="col-sm-9">Extra Storage Cost</div>
-                        <div class="col-sm-3">$<span id="extra-storage">0</span></div>
-                    </div>
-                    <div class="row border-bottom border-dark py-2">
-                        <div class="col-sm-9">Delivery Charge</div>
-                        <div class="col-sm-3">$<span id="extra-charge">0</span></div>
-                    </div>
-                    <div class="row border-bottom py-2">
-                        <div class="col-sm-9">Total Price</div>
-                        <div class="col-sm-3">$<span id="total-price">1299</span></div>
-                    </div>
-                </article>
+                <div class="row">
+                    <article class="col-sm-7 col-10 fw-bold mt-4">
+                        <div class="row border-bottom py-2">
+                            <div class="col-9">Best Price</div>
+                            <div class="col-3">$<span id="base-price">1299</span></div>
+                        </div>
+                        <div class="row border-bottom py-2">
+                            <div class="col-9">Extra Memory Cost</div>
+                            <div class="col-3">$<span id="extra-memory">0</span></div>
+                        </div>
+                        <div class="row border-bottom py-2">
+                            <div class="col-9">Extra Storage Cost</div>
+                            <div class="col-3">$<span id="extra-storage">0</span></div>
+                        </div>
+                        <div class="row border-bottom border-dark py-2">
+                            <div class="col-9">Delivery Charge</div>
+                            <div class="col-3">$<span id="extra-charge">0</span></div>
+                        </div>
+                        <div class="row border-bottom py-2">
+                            <div class="col-9">Total Price</div>
+                            <div class="col-3">$<span id="total-price">1299</span></div>
+                        </div>
+                    </article>
+                </div>
                 <!-- product configuration end  -->
 
                 <!-- promo code section start -->
@@ -104,7 +178,18 @@
     <!-- main section ends here  -->
 
     <!-- footer section starts here  -->
-    <footer></footer>
+    <footer class="bg-light py-3">
+        <div class="container d-lg-flex justify-content-between">
+            <span>Copyright &copy; 2021 Apple Inc. All rights reserved.</span>
+            <div class="mt-3 mt-lg-0">
+                <span class="px-lg-3 pe-1 border-end border-secondary">Privacy Policy</span>
+                <span class="px-lg-3 pe-1 border-end border-secondary">Terms of Use</span>
+                <span class="px-lg-3 pe-1 border-end border-secondary">Sales and Refunds</span>
+                <span class="px-lg-3 pe-1 border-end border-secondary">Legal</span>
+                <span class="px-lg-3 pe-1">Site Map</span>
+            </div>
+        </div>
+    </footer>
     <!-- footer section ends here  -->
 </body>
 
