--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="row">
                     <article class="col-sm-7 col-10 fw-bold mt-4">
                         <div class="row border-bottom py-2">
-                            <div class="col-9">Best Price</div>
+                            <div class="col-9">Base Price</div>
                             <div class="col-3">$<span id="base-price">1299</span></div>
                         </div>
                         <div class="row border-bottom py-2">
